<resources>
    <string name="app_name">Chinese Boxing Connection</string>
    <string name="email_address">cbc@uniserve.com</string>

    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_members">Members</string>
    <string name="nav_drawer_attendance">Attendance</string>
    <string name="nav_drawer_share">Share</string>
    <string name="nav_drawer_export">Export</string>
    <string name="nav_drawer_import">Import</string>
    <string name="nav_drawer_run_mode">Run Mode</string>
    <string name="nav_drawer_login">Login</string>
    <string name="nav_drawer_generate_members">Generate Samples</string>
    <string name="nav_drawer_delete_members">Delete All Members</string>
    <string name="nav_drawer_list_members">List All Members</string>

    <!-- MENU ACTIONS -->
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_attendance">Attendance</string>
    <string name="toolbar_title">[Enter a TOOLBAR to Filter]</string>
    <string name="title_activity_member">Member Details</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Admin Login</string>
    <string name="action_sign_out_short">Admin Logout</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_attendance_list">Attendance List</string>
    <string name="title_activity_attendance">Attendance Details</string>

    <string name="title_activity_test_date_picker">TestDatePickerActivity</string>

    <!-- RUN MODE ACTIVITY -->
    <string name="title_activity_run_mode">Chinese Boxing Connection</string>
    <string name="attendance_instructions">Find Your Name to Sign In</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="welcome_message">Welcome</string>
    <string name="warn_duplicate_signin">has already signed in today</string>
    <string name="warn_no_member_selected">No member selected. Select a member and try again.</string>
    <string name="error_signin_error">An error occurred attempting to sign you in...</string>

    <!-- Strings related to Member Activity -->
    <string name="error_invalid_fname">First Name value is invalid</string>
    <string name="error_invalid_lname">Last Name value is invalid</string>
    <string name="error_invalid_dob">DOB value is invalid</string>
    <string name="error_invalid_member_email">Email value is invalid</string>
    <string name="error_invalid_phone">Phone value is invalid</string>
    <string name="error_invalid_membersince">Member Since value is invalid</string>
    <string name="error_invalid_beltlevel">Belt Level value is invalid</string>
    <string name="label_firstname">First Name</string>
    <string name="label_lastname">Last Name</string>
    <string name="label_dob">Date of Birth</string>
    <string name="label_phone">Phone Number</string>
    <string name="label_email">Email</string>
    <string name="label_belt_level">Belt Level</string>
    <string name="label_membersince">Member Since</string>
    <string name="alert_member_delete">Are you sure you want to delete the member and all associated attendance records?</string>
    <string-array name="belt_level_list">
        <item>White</item>
        <item>Yellow</item>
        <item>Purple</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Brown</item>
        <item>Black</item>
    </string-array>
    <integer-array name="belt_images_list">
        <item>@drawable/whitebelt</item>
        <item>@drawable/yellowbelt</item>
        <item>@drawable/purplebelt</item>
        <item>@drawable/bluebelt</item>
        <item>@drawable/greenbelt</item>
        <item>@drawable/brownbelt</item>
        <item>@drawable/blackbelt</item>

    </integer-array>

    <!-- Attendance Activity -->
    <string name="label_attendance_for">Attendance for</string>
    <string name="label_full_name">[Member Name]</string>
    <string name="label_attendance_date">Attendance Date</string>
    <string name="label_attendance_id">Attendance ID</string>
    <string name="warning_no_attendance">No Attendance record selected</string>
    <string name="searchview_hint_attendance">[Enter a date to filter]</string>
    <string name="alert_attendance_delete">Are you sure you want to delete this attendance record?</string>
    <string name="error_attendance_create">Error creating Attendance Record:</string>
    <string name="info_attendance_saved">Saved attendance for member</string>


    <!-- Main Activity -->
    <string name="warning_no_member">No member selected. Please select a member.</string>
    <string name="title_activity_export">Export Data</string>
    <string name="searchview_hint_membername">[Enter a Name to Filter]</string>

    <!-- Export Activity -->
    <string name="export_start_date">Start Date</string>
    <string name="export_end_date">End Date</string>
    <string name="export_exp_members">Export Members</string>
    <string name="export_include_att_totals">Include Attendance Totals</string>
    <string name="export_exp_attendance">Export Attendance</string>
    <string name="info_export_data">Exporting data...</string>
    <string name="info_export_complete">Export complete. Data can be found in</string>
    <string name="error_invalid_startdate">Start Date is invalid</string>
    <string name="error_invalid_enddate">End Date is invalid</string>
    <string name="error_file_permissions">You need to grant file permissions to perform this function</string>
    <string name="error_unknown_export">There was an unknown error during export</string>

    <!-- Import Activity -->
    <string name="import_file_prompt">Please select a file:</string>
    <string name="warning_no_file">No file selected</string>
    <string name="title_activity_import">Import Member Data</string>
    <string name="report_type_mismatch">The file you selected does not match the report type selected. Are you sure?</string>
    <string name="no_file_selected">Please select a file to continue</string>
    <string name="no_report_type_selected">You must select a report type first</string>
    <string name="ready_to_import">Ready to import file</string>
    <string name="starting_import">Starting import...</string>
    <string name="permissions_error">Permission denied. You need to grant file permissions to perform this function</string>
    <string name="error_unknown_import">There was an unknown error during export</string>
    <string name="info_import_complete">Import complete!</string>
    <string-array name="report_types">
        <item>Members</item>
        <item>Members with Totals</item>
        <item>Attendance</item>
    </string-array>

</resources>
