<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jason.gymkata.ExportActivity"
    tools:showIn="@layout/activity_export"
    android:orientation="vertical">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:layout_margin="10dp">

        <FrameLayout
            android:layout_width="287dp"
            android:layout_height="68dp"
            android:background="@drawable/border"
            >

            <CheckBox
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:text="@string/export_exp_members"
                android:id="@+id/cbExportMembers" />

            <CheckBox
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:text="@string/export_include_att_totals"
                android:id="@+id/cbIncludeAttTotals"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_horizontal|bottom" />

        </FrameLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_exp_attendance"
            android:id="@+id/cbExportAttendance" />

    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/export_start_date"
                android:id="@+id/textView10"
                android:layout_gravity="center_vertical"
                android:layout_column="1" />
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/buttStartDateCalendar"
                android:src="@drawable/ic_button_calendar"
                android:layout_gravity="center_vertical"
                android:layout_column="2"/>
            <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:id="@+id/etStartDate"
                android:layout_gravity="center_horizontal"
                android:layout_column="3"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/export_end_date"
                android:id="@+id/textView11"
                android:layout_gravity="center_vertical"
                android:layout_column="1"/>
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/buttEndDateCalendar"
                android:src="@drawable/ic_button_calendar"
                android:layout_gravity="center_vertical"
                android:layout_column="2"/>
            <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:id="@+id/etEndDate"
                android:layout_gravity="center_horizontal"
                android:layout_column="3"/>
        </TableRow>
    </TableLayout>



</LinearLayout>
