<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jason.gymkata.AttendanceActivity"
    tools:showIn="@layout/activity_attendance"
    android:orientation="vertical">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.26">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_attendance_for"
                android:id="@+id/textView0"
                android:layout_column="4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_full_name"
                android:id="@+id/tvMemberFullName"
                android:layout_column="6" />
        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_attendance_id"
                android:id="@+id/textView1"
                android:layout_column="4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/tvAttendId"
                android:layout_column="6" />
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_attendance_date"
                android:id="@+id/textView2"
                android:layout_column="4"
                android:layout_gravity="center_vertical" />
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/buttAttDateCalendar"
                android:layout_column="5"
                android:src="@drawable/ic_button_calendar"
                android:layout_gravity="center_vertical" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="6"
                >

            <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/etAttendanceDate"
                android:textIsSelectable="true" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>


    </TableLayout>
</LinearLayout>
