<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jason.gymkata.MemberActivity"
    tools:showIn="@layout/activity_member"
    android:orientation="vertical"
    android:weightSum="1">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.16">

        <!--TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="ID"
                android:id="@+id/textView0"
                android:layout_column="4" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etId"
                android:layout_column="6"
                android:focusable="false"
                android:textIsSelectable="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_firstname"
                android:id="@+id/textView2"
                android:layout_column="4"
                android:layout_gravity="center_vertical" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="6"
                >
            <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etFirstName"
                android:focusable="true"
                android:textIsSelectable="true" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_lastname"
                android:id="@+id/textView3"
                android:layout_column="4"
                android:layout_gravity="center_vertical" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="6"
                >
            <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etLastName"
                 />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_dob"
                android:id="@+id/textView4"
                android:layout_column="4"
                android:layout_gravity="center_vertical" />
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/buttDobCalendar"
                android:layout_column="5"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_button_calendar" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="6"
                >

            <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/etDOB"
                />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_email"
                android:id="@+id/textView5"
                android:layout_column="4"
                android:layout_gravity="center_vertical" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="6"
                >

            <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/etEmail"
                 />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_phone"
                android:id="@+id/textView6"
                android:layout_column="4"
                android:layout_gravity="center_vertical" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="6"
                >

            <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/etPhone"
                />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>



        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_belt_level"
                android:id="@+id/textView7"
                android:layout_column="4"
                android:layout_gravity="center_vertical" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spBeltLevel"
                android:layout_column="6" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_membersince"
                android:id="@+id/textView8"
                android:layout_column="4"
                android:layout_gravity="center_vertical" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/buttMemberSinceCalendar"
                android:layout_column="5"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_button_calendar" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="6"
                >

            <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:id="@+id/etMemberSince"
                />
            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>
    </TableLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="#e4dcdc">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageBeltLevel"
            android:src="@drawable/blackbelt"
            android:layout_gravity="center" />


    </LinearLayout>

</LinearLayout>
